--- a/app/src/main/res/layout/fragment_find_doctor.xml
+++ b/app/src/main/res/layout/fragment_find_doctor.xml
@@ -79,10 +79,11 @@
             app:layout_constraintTop_toTopOf="@+id/btn_back_find_doctor" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/rv_doctors"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
