--- a/app/src/main/res/navigation/doctor_nav_graph.xml
+++ b/app/src/main/res/navigation/doctor_nav_graph.xml
@@ -51,7 +51,22 @@
         android:name="com.syncdev.shifaa.ui.doctor.patients.new_patients.request_details.AppointmentRequestDetailsFragment"
         android:label="AppointmentRequestDetailsFragment" >
         <argument
-            android:name="patient_name"
+            android:name="patientName"
+            app:argType="string" />
+        <argument
+            android:name="patientId"
+            app:argType="string" />
+        <argument
+            android:name="patientGender"
+            app:argType="string" />
+        <argument
+            android:name="time"
+            app:argType="string" />
+        <argument
+            android:name="date"
+            app:argType="string" />
+        <argument
+            android:name="comment"
             app:argType="string" />
     </fragment>
     <fragment
