--- a/app/src/main/res/layout/fragment_patient_home.xml
+++ b/app/src/main/res/layout/fragment_patient_home.xml
@@ -34,6 +34,21 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_medical_card"
+                android:layout_width="250dp"
+                android:layout_height="64dp"
+                android:background="@drawable/custom_filled_rounded_button"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Medical Card"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_small"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_book" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
