--- a/app/src/main/res/navigation/patient_nav_graph.xml
+++ b/app/src/main/res/navigation/patient_nav_graph.xml
@@ -17,6 +17,13 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
+        <action
+            android:id="@+id/action_patientHomeFragment_to_medicalCardFragment"
+            app:destination="@id/medicalCardFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/patientReportsFragment"
@@ -139,5 +146,10 @@
             app:popUpTo="@id/patientHomeFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/medicalCardFragment"
+        android:name="com.syncdev.shifaa.ui.patient.home.medical_card.MedicalCardFragment"
+        android:label="MedicalCardFragment"
+        tools:layout="@layout/fragment_medical_card"/>
 
 </navigation>
